# GazillionaireTools

./: CMakeLists.txt
QuickCalc/: CMakeLists.txt  QuickCalc.cpp  QuickCalc.h
